1.5/_sources/modules/generated/sklearn.multioutput.MultiOutputRegressor.rst.txt
MultiOutputRegressor
====================

.. currentmodule:: sklearn.multioutput

.. autoclass:: MultiOutputRegressor
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multioutput.MultiOutputRegressor sklearn.multioutput.MultiOutputRegressor.__init__ sklearn.multioutput.MultiOutputRegressor.fit sklearn.multioutput.MultiOutputRegressor.get_metadata_routing sklearn.multioutput.MultiOutputRegressor.get_params sklearn.multioutput.MultiOutputRegressor.partial_fit sklearn.multioutput.MultiOutputRegressor.predict sklearn.multioutput.MultiOutputRegressor.score sklearn.multioutput.MultiOutputRegressor.set_fit_request sklearn.multioutput.MultiOutputRegressor.set_params sklearn.multioutput.MultiOutputRegressor.set_partial_fit_request sklearn.multioutput.MultiOutputRegressor.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -