1.7/_sources/modules/generated/sklearn.multioutput.MultiOutputRegressor.rst.txt
MultiOutputRegressor
====================

.. currentmodule:: sklearn.multioutput

.. autoclass:: MultiOutputRegressor
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.multioutput.MultiOutputRegressor sklearn.multioutput.MultiOutputRegressor.__delattr__ sklearn.multioutput.MultiOutputRegressor.__dir__ sklearn.multioutput.MultiOutputRegressor.__eq__ sklearn.multioutput.MultiOutputRegressor.__format__ sklearn.multioutput.MultiOutputRegressor.__ge__ sklearn.multioutput.MultiOutputRegressor.__getattribute__ sklearn.multioutput.MultiOutputRegressor.__getstate__ sklearn.multioutput.MultiOutputRegressor.__gt__ sklearn.multioutput.MultiOutputRegressor.__hash__ sklearn.multioutput.MultiOutputRegressor.__init__ sklearn.multioutput.MultiOutputRegressor.__init_subclass__ sklearn.multioutput.MultiOutputRegressor.__le__ sklearn.multioutput.MultiOutputRegressor.__lt__ sklearn.multioutput.MultiOutputRegressor.__ne__ sklearn.multioutput.MultiOutputRegressor.__new__ sklearn.multioutput.MultiOutputRegressor.__reduce__ sklearn.multioutput.MultiOutputRegressor.__reduce_ex__ sklearn.multioutput.MultiOutputRegressor.__repr__ sklearn.multioutput.MultiOutputRegressor.__setattr__ sklearn.multioutput.MultiOutputRegressor.__setstate__ sklearn.multioutput.MultiOutputRegressor.__sizeof__ sklearn.multioutput.MultiOutputRegressor.__sklearn_clone__ sklearn.multioutput.MultiOutputRegressor.__sklearn_tags__ sklearn.multioutput.MultiOutputRegressor.__str__ sklearn.multioutput.MultiOutputRegressor.__subclasshook__ sklearn.multioutput.MultiOutputRegressor._build_request_for_signature sklearn.multioutput.MultiOutputRegressor._get_default_requests sklearn.multioutput.MultiOutputRegressor._get_doc_link sklearn.multioutput.MultiOutputRegressor._get_metadata_request sklearn.multioutput.MultiOutputRegressor._get_param_names sklearn.multioutput.MultiOutputRegressor._get_params_html sklearn.multioutput.MultiOutputRegressor._html_repr sklearn.multioutput.MultiOutputRegressor._repr_html_inner sklearn.multioutput.MultiOutputRegressor._repr_mimebundle_ sklearn.multioutput.MultiOutputRegressor._validate_params sklearn.multioutput.MultiOutputRegressor.fit sklearn.multioutput.MultiOutputRegressor.get_metadata_routing sklearn.multioutput.MultiOutputRegressor.get_params sklearn.multioutput.MultiOutputRegressor.partial_fit sklearn.multioutput.MultiOutputRegressor.predict sklearn.multioutput.MultiOutputRegressor.score sklearn.multioutput.MultiOutputRegressor.set_fit_request sklearn.multioutput.MultiOutputRegressor.set_params sklearn.multioutput.MultiOutputRegressor.set_partial_fit_request sklearn.multioutput.MultiOutputRegressor.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -